--- a/src/global.css
+++ b/src/global.css
@@ -23,11 +23,24 @@ button {
 .container {
   display: flex;
   flex-direction: column;
-  flex: 1;
-  padding: 0 10px;
+  margin: 0 10px;
 }
 .row {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+@media only screen and (min-width: 960px) {
+  .container {
+    width: 940px;
+    margin: 0 auto;
+  }
+}
+
+@media only screen and (min-width: 1300px) {
+  .container {
+    width: 1280px;
+    margin: 0 auto;
+  }
 }
